# Assembler

./: CMakeLists.txt  assembler.c  assembler.h  binary_output.txt  bits_command.h  command_router.c  command_router.h  commands_handler.c  consts.h  file_handler.c  file_handler.h  input.c  input.h  instruction_router.c  instruction_router.h  instruction_sentences.c  instruction_sentences.h  main.c  parsed_command.c  parsed_command.h  parsed_instruction.c  parsed_instruction.h  router.c  router.h  utils.c  utils.h  validator.c  validator.h
addressing/: addressing_utils.c  addressing_utils.h  direct_addressing .h  direct_addressing.c  direct_addressing.h  direct_register_addressing.c  direct_register_addressing.h  indirect_register_addressing.c  indirect_register_addressing.h  instant_addressing.c  instant_addressing.h
data_structures/: instruction_counter.h  reading_two_list.c  reading_two_list.h  symbols_list.c  symbols_list.h
tests/: try.txt
tests/additional_test/: test1.as  test1.ob  test2.as
tests/book_test/: assembler  book_test.as  book_test.ent  book_test.ext  book_test.ob
tests/error_test/: assembler  error1.  error2.as  error2.ent
